# Hummingbird

./: .gitignore  default.nix  flake.nix  hie.yaml  hummingbird.cabal  hummingbird.nix  package.nix  shell.nix
code/: birds.cabal  hummingbird.cabal
code/app/: Main.hs
code/birds/: Birds.hs
code/birds-prelude/: Num.hs
code/birds-prelude/Birds/: Prelude.hs
code/boot/: Num.hs  Text.hs
code/hummingbird/: Fetch.hs
code/hummingbird/Crypto/Hash/: Generic.hs
code/hummingbird/Data/: ContentAddress.hs
code/hummingbird/Data/Dependent/: HashMap.hs
code/hummingbird/Data/Map/: Justified.hs
code/hummingbird/Fetch/: Mapped.hs  Monad.hs
code/hummingbird/Hummingbird/: Builtin.hs  Codebase.hs  Dialectica.hs  Elaboration.hs  Error.hs  Fetch.hs  Ingest.hs  Interpret.hs  Literal.hs  Main.hs  Name.hs  Prelude.hs  Query.hs  Rename.hs  Repl.hs  Rules.hs  Surface.hs  Tacit.hs  Var.hs  VarMap.hs  Version.hs
code/hummingbird/Hummingbird/Codebase/: Db.hs  Hash.hs  Id.hs  Patch.hs  Stages.hs
code/hummingbird/Hummingbird/Elaboration/: Context.hs  Hash.hs  Monad.hs
code/hummingbird/Hummingbird/Fetch/: Mapped.hs  Writer.hs
code/hummingbird/Hummingbird/Repl/: Command.hs  Console.hs  Tui.hs
code/hummingbird/Hummingbird/Surface/: Layoutize.hs  Located.hs  Parse.hs  Parsec.hs  Token.hs  Tokenize.hs
code/hummingbird/Prelude/: Num.hs
code/hummingbird/app/: Main.hs
code/hummingbird/examples/: test
code/prelude/Birds/: Prelude.hs
code/prelude/Birds/Prelude/: Num.hs
code/rock/: Fetch.hs
code/rock/Fetch/: Chronicle.hs  Except.hs  Mapped.hs  Monad.hs  Writer.hs
lib/: Prelude.hs
lib/Crypto/Hash/: Generic.hs
lib/Data/: ContentAddress.hs  Fetch.hs  Graph.hs
lib/Data/Dependent/: HashMap.hs
lib/Data/Graph/: Internal.hs
lib/Data/IORef/: Extra.hs
lib/Data/Map/: Justified.hs
lib/Data/Primitive/: Concurrent.hs
lib/Data/Primitive/MVar/: Extra.hs
lib/Data/Primitive/MutVar/: Extra.hs
lib/Hummingbird/: Builtin.hs  Error.hs  Fetch.hs  Ingest.hs  Interpret.hs  Literal.hs  Main.hs  Name.hs  Query.hs  Repl.hs  Tacit.hs  Var.hs  VarMap.hs
lib/Hummingbird/Codebase/: Db.hs  Hash.hs
lib/Hummingbird/Elaboration/: Meta.hs  Mode.hs  Monad.hs  Rename.hs
lib/Hummingbird/Repl/: Command.hs
lib/Hummingbird/Surface/: Parse.hs  Token.hs
nix/: bootstrap.nix  hummingbird.nix  nixpkgs.nix  package.nix  sources.json
nix/build-haskell/: default.nix  init.nix
scripts/: build.nix
