cabal-version: 3.4

name: birds
version: 0

build-type: Simple

common common-language
  default-language:
    Haskell2010
  default-extensions:
    DefaultSignatures
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    NoStarIsType
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeAbstractions
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import: common-language
  exposed-modules:
    Birds
  hs-source-dirs: birds
  build-depends:
    , base ^>= 4.21
    , birds:boot
    , containers
  default-extensions:
    ConstraintKinds
    DerivingVia

library boot
  import: common-language
  exposed-modules:
    Data.Map.Justified
    Num
  hs-source-dirs: boot
  build-depends:
    , base ^>= 4.21
    , containers
    , text
  default-extensions:
    ConstraintKinds
    DeriveTraversable
    DerivingVia
    RoleAnnotations

executable hummingbird-cli
  main-is: hummingbird/app/Main.hs
  build-depends:
    , base ^>= 4.21
    , birds:hummingbird
  default-language:
    Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

library hummingbird
  import: common-language
  exposed-modules:
    Hummingbird.Builtin
    Hummingbird.Codebase
    Hummingbird.Dialectica
    Hummingbird.Error
    Hummingbird.Interpret
    Hummingbird.Literal
    Hummingbird.Main
    Hummingbird.Name
    Hummingbird.Prelude
    Hummingbird.Query
    Hummingbird.Rename
    Hummingbird.Surface
    Hummingbird.Surface.Layoutize
    Hummingbird.Surface.Located
    Hummingbird.Surface.Parse
    Hummingbird.Surface.Parsec
    Hummingbird.Surface.Token
    Hummingbird.Surface.Tokenize
    Hummingbird.Var
    Hummingbird.VarMap
  other-modules:
  hs-source-dirs: hummingbird
  build-depends:
    , base ^>= 4.21
    , birds:boot
    , birds:rock
    , containers
    , filepath
    , hashable
    , monad-chronicle
    , mtl
    , parsec
    , prettyprinter
    , text
    , text-rope
    , these
    , transformers
    , unordered-containers
  default-extensions:
    ConstraintKinds
    DataKinds
    DerivingVia
    FunctionalDependencies
    GADTs

library rock
  import: common-language
  exposed-modules:
    Fetch
    Fetch.Mapped
    Fetch.Monad
  hs-source-dirs: rock
  build-depends:
    , base ^>= 4.21
    , birds:boot
    , containers
    , hashable
    , monad-chronicle
    , mtl
    , text
    , these
    , transformers
    , unordered-containers
  default-extensions:
    ConstraintKinds
    DerivingVia
    GADTs
