cabal-version: 3.4
name: hummingbird
version: 0
build-type: Simple

common common-language
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    NoStarIsType
    OverloadedStrings
    PackageImports
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeAbstractions
    TypeApplications
    TypeData
    TypeFamilies
    TypeOperators

executable hummingbird
  import: common-language
  hs-source-dirs: ./app
  main-is: Main.hs
  ghc-options: -threaded
  build-depends:
    , base ^>= 4.21
    , crypton
    , directory
    , exceptions
    , filepath
    , hummingbird
    , mtl
    , text
    , prettyprinter
    , prettyprinter-ansi-terminal
  mixins:
    base hiding (Prelude)

library
  import: common-language
  hs-source-dirs: ./hummingbird
  exposed-modules:
    Crypto.Hash.Generic
    Data.IORef.Extra
    Data.Map.Justified
    Fetch
    Fetch.Mapped
    Fetch.Monad
    Hummingbird.Builtin
    Hummingbird.Codebase
    Hummingbird.Elaboration
    Hummingbird.Elaboration.Context
    Hummingbird.Elaboration.Meta
    Hummingbird.Elaboration.Mode
    Hummingbird.Elaboration.Monad
    Hummingbird.Elaboration.Rename
    Hummingbird.Error
    Hummingbird.Ingest
    Hummingbird.Interpret
    Hummingbird.Literal
    Hummingbird.Main
    Hummingbird.Name
    Hummingbird.Query
    Hummingbird.Repl
    Hummingbird.Repl.Command
    Hummingbird.Repl.Console
    Hummingbird.Surface
    Hummingbird.Surface.Layoutize
    Hummingbird.Surface.Located
    Hummingbird.Surface.Parse
    Hummingbird.Surface.Parsec
    Hummingbird.Surface.Token
    Hummingbird.Surface.Tokenize
    Hummingbird.Var
    Hummingbird.VarMap
    Hummingbird.Version
    Prelude
    Prelude.Num
  other-modules:
  build-depends:
    , ansi-terminal
    , base ^>= 4.21
    , binary
    , bytestring
    , containers
    , crypton
    , filepath
    , hashable
    , haskeline
    , monad-chronicle
    , mtl
    , parsec
    , prettyprinter
    , prettyprinter-ansi-terminal
    , shellmet
    , template-haskell
    , text
    , text-rope
    , these
    , transformers
    , unordered-containers
